# forma

./: .env.example  .gitignore  README.md  pyproject.toml  server.sh  test_agent_rag.py
benchmarks/longmemeval/: run_benchmark.py
config/: agents.json
docs/: async-rl-inference.md  design-document.md  multi_agent_design.md  rl-slm-research.md  tool_calling_design.md
src/forma/: __init__.py  api.py  config.py  extractor.py  forma_db.py  main.py  proxy.py  storage.py  tracker.py  upstream_manager.py
src/forma/agents/: __init__.py  config_loader.py  discovery.py  meta_evaluation.py  orchestrator.py  parser.py  registry.py  router.py
src/forma/prompts/: extraction.txt
src/forma/tools/: base.py  executor.py
src/forma/tools/builtin/: memory_query.py  web_search.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py
webui/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
webui/src/: App.vue  api.ts  main.ts
webui/src/components/: Agents.vue  Chat.vue  Dashboard.vue  RequestsList.vue  Upstreams.vue
webui/src/types/: index.ts
