[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forma"
version = "0.1.0"
description = "Autonomous Cognitive Proxy and Hybrid RAG System"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Forma Team" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
forma = "forma.main:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/forma"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true